@@ -1,5 +1,10 @@
 ----------  JFREECHART 1.0.13 RELEASED ------------------------
 
+2009-04-20  David Gilbert  <david.gilbert@object-refinery.com>
+
+    * source/org/jfree/data/general/DatasetUtilities.java
+    (iterateToFindRangeBounds): Handle BoxAndWhiskerCategoryDataset.
+
 2009-04-16  David Gilbert  <david.gilbert@object-refinery.com>
 
     * source/org/jfree/chart/title/PaintScaleLegend.java
